--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -92,8 +92,8 @@ header {
   .nav-items {
     position: relative;
     background: var(--modal-bg-color);
-    width: 576px;
-    max-width: 576px;
+    width: 100%;
+    max-width: min(576px, 90vw);
     display: flex;
     align-items: center;
     flex-direction: column;
